# agent-generator

./: .gitignore  README.md  pyproject.toml
data/: config.json  context.md
progress/: checkpoint_pipeline.json  parsed_context.json
src/: __init__.py
src/auto_agent_generator/: cli.py
src/auto_agent_generator/config/: parser.py
src/auto_agent_generator/context/: parser.py
src/auto_agent_generator/llm/: claude.py  codex.py
src/auto_agent_generator/mcp/: manager.py
src/auto_agent_generator/pipeline/: generator.py
src/auto_agent_generator/progress/: manager.py
